--- a/src/css/scroll-up.css
+++ b/src/css/scroll-up.css
@@ -4,7 +4,7 @@
   pointer-events: none;
   position: fixed;
   top: 85%;
-  right: 5%;
+  right: 2%;
   width: 64px;
   height: 64px;
   cursor: pointer;
@@ -12,8 +12,8 @@
   border-radius: 50%;
   border: 10px solid transparent;
 
-  transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 1500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .show {
@@ -23,13 +23,13 @@
 }
 
 .anchor-btn:hover {
-  border: 5px solid #eac645;
+  border: 10px solid #eac645;
 }
 
 .anchor-icon {
   fill: #ffff;
 }
 
-.anchor-icon:hover {
+/* .anchor-icon:hover {
   fill: #eac645;
-}
+} */
