--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -3,8 +3,8 @@
   height: 18px;
   fill: var(--black-color);
   position: absolute;
-  top: 16px;
-  right: 80px;
+  top: 30px;
+  right: 100px;
 }
 .hr-mob:hover,
 .hr-mob:focus {
@@ -25,7 +25,7 @@
   margin-top: 56px;
   border: 2px solid var(--categories-links-active-color);
   background-color: transparent;
-  border-radius: 40px;
+  border-radius: 18px;
   padding-top: 10px;
   padding: 14px 23px;
   font-weight: 700;
@@ -67,7 +67,7 @@
   padding: 20px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   max-width: 800px;
-  width: 80%;
+  width: auto;
   height: 762px;
   overflow-y: hidden;
   background-attachment: fixed;
@@ -157,6 +157,7 @@
 }
 
 .modal-content {
+
   display: flex;
   flex-direction: column;
 }
